// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo to match snapshot ["digitalcube"] 1`] = `
<DocumentFragment>
  <img
    alt="digitalcube"
    height="9.740259740259742"
    width="50"
  />
</DocumentFragment>
`;

exports[`Logo to match snapshot ["shifter"] 1`] = `
<DocumentFragment>
  <img
    alt="shifter"
    height="66.66666666666666"
    width="50"
  />
</DocumentFragment>
`;
